@@ -1584,10 +1584,46 @@ global $selected_btc_primary_currency_value, $app_config;
 
 
 
+  elseif ( strtolower($chosen_exchange) == 'wazirx' ) {
+
+
+     $json_string = 'https://api.wazirx.com/api/v2/tickers';
+     
+     $jsondata = @external_api_data('url', $json_string, $app_config['power_user']['last_trade_cache_time']);
+     
+     $data = json_decode($jsondata, true);
+  
+      if (is_array($data) || is_object($data)) {
+  
+       foreach ($data as $key => $value) {
+         
+         if ( $key == $market_id ) {
+          
+         $result = array(
+    							'last_trade' => $value["last"],
+    							'24hr_asset_volume' => $value["volume"],
+    							'24hr_pairing_volume' => null // No pairing volume data for this API
+    						);
+          
+         }
+     
+       }
+      
+      }
+  
+  
+  }
+ 
+ 
+ 
+ ////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
   elseif ( strtolower($chosen_exchange) == 'zebpay' ) {
 
 
-     $json_string = 'https://www.zebapi.com/api/v1/market';
+     $json_string = 'https://www.zebapi.com/pro/v1/market/';
      
      $jsondata = @external_api_data('url', $json_string, $app_config['power_user']['last_trade_cache_time']);
      
